[package]
name = "jay"
version = "0.0.0"
edition = "2021"

[dependencies]
llvm-ir = { version = "0.8.1", features = ["llvm-13"] }
logos = "0.12.1"
either = "1.7.0"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1
