[package]
name = "jay"
version = "0.0.0"
edition = "2021"

[dependencies]
inkwell = {git = "https://github.com/TheDan64/inkwell", features = ["llvm16-0"] }
logos = "0.13.0"
colored = "2.0.4"
bumpalo = "3.14.0"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1
