[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-ir = { version = "0.8.1", features = ["llvm-13"] }
logos = "0.12.0"
either = "1.6.1"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1
